src/test/deca/syntax/valid/custom/println/float_println.deca
// Description:
//   Print a float.
// Results:
//
//
// History:
//    created on 22/01/2022

{
   println(1.56);
}
