src/test/deca/syntax/invalid/custom/if_without_opar.deca
// Description:
//    if instruction without parents
//
// Resultats:
//    ligne 11 : Error, missing '(' at true
//
// Historique:
//    cree le 11/01/2022

{
if true) {
println("a string");
}
}